feat: implement base starter app

--- a/package.json
+++ b/package.json
@@ -10,6 +10,16 @@
     "e2e": "ng e2e"
   },
   "private": true,
+  "resolutions": {
+    "@angular/animations": "~10.0.0",
+    "@angular/common": "~10.0.0",
+    "@angular/compiler": "~10.0.0",
+    "@angular/core": "~10.0.0",
+    "@angular/forms": "~10.0.0",
+    "@angular/platform-browser": "~10.0.0",
+    "@angular/platform-browser-dynamic": "~10.0.0",
+    "@angular/router": "~10.0.0"
+  },
   "dependencies": {
     "@angular/animations": "~10.0.0",
     "@angular/common": "~10.0.0",
@@ -19,17 +29,40 @@
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
+    "@kikstart-ui/layout-web": "^2.0.0-alpha.0",
+    "@kikstart-ui/themes": "^2.0.0-alpha.0",
+    "@kikstart-ui/ui-avatar": "^2.0.0-alpha.1",
+    "@kikstart-ui/ui-brand": "^2.0.0-alpha.1",
+    "@kikstart-ui/ui-button": "^2.0.0-alpha.1",
+    "@kikstart-ui/ui-card": "^2.0.0-alpha.1",
+    "@kikstart-ui/ui-cart-icon": "^2.0.0-alpha.1",
+    "@kikstart-ui/ui-code": "^2.0.0-alpha.1",
+    "@kikstart-ui/ui-comment": "^2.0.0-alpha.1",
+    "@kikstart-ui/ui-footer": "^2.0.0-alpha.1",
+    "@kikstart-ui/ui-form": "^2.0.0-alpha.1",
+    "@kikstart-ui/ui-hero": "^2.0.0-alpha.1",
+    "@kikstart-ui/ui-icon": "^2.0.0-alpha.1",
+    "@kikstart-ui/ui-label": "^2.0.0-alpha.1",
+    "@kikstart-ui/ui-link": "^2.0.0-alpha.1",
+    "@kikstart-ui/ui-loading": "^2.0.0-alpha.1",
+    "@kikstart-ui/ui-markdown": "^2.0.0-alpha.1",
+    "@kikstart-ui/ui-no-data": "^2.0.0-alpha.1",
+    "@kikstart-ui/ui-price": "^2.0.0-alpha.1",
+    "@kikstart-ui/ui-tabs": "^2.0.0-alpha.1",
+    "@kikstart-ui/ui-timeago": "^2.0.0-alpha.1",
+    "add": "^2.0.6",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
+    "yarn": "^1.22.4",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.0",
     "@angular/cli": "~10.0.0",
     "@angular/compiler-cli": "~10.0.0",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0-next.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
