--- a/package.json
+++ b/package.json
@@ -29,27 +29,28 @@
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
-    "@kikstart-ui/layout-web": "^2.0.0-alpha.0",
-    "@kikstart-ui/themes": "^2.0.0-alpha.0",
-    "@kikstart-ui/ui-avatar": "^2.0.0-alpha.1",
-    "@kikstart-ui/ui-brand": "^2.0.0-alpha.1",
-    "@kikstart-ui/ui-button": "^2.0.0-alpha.1",
-    "@kikstart-ui/ui-card": "^2.0.0-alpha.1",
-    "@kikstart-ui/ui-cart-icon": "^2.0.0-alpha.1",
-    "@kikstart-ui/ui-code": "^2.0.0-alpha.1",
-    "@kikstart-ui/ui-comment": "^2.0.0-alpha.1",
-    "@kikstart-ui/ui-footer": "^2.0.0-alpha.1",
-    "@kikstart-ui/ui-form": "^2.0.0-alpha.1",
-    "@kikstart-ui/ui-hero": "^2.0.0-alpha.1",
-    "@kikstart-ui/ui-icon": "^2.0.0-alpha.1",
-    "@kikstart-ui/ui-label": "^2.0.0-alpha.1",
-    "@kikstart-ui/ui-link": "^2.0.0-alpha.1",
-    "@kikstart-ui/ui-loading": "^2.0.0-alpha.1",
-    "@kikstart-ui/ui-markdown": "^2.0.0-alpha.1",
-    "@kikstart-ui/ui-no-data": "^2.0.0-alpha.1",
-    "@kikstart-ui/ui-price": "^2.0.0-alpha.1",
-    "@kikstart-ui/ui-tabs": "^2.0.0-alpha.1",
-    "@kikstart-ui/ui-timeago": "^2.0.0-alpha.1",
+    "@kikstart-ui/layout-web": "^2.0.0-alpha.3",
+    "@kikstart-ui/themes": "^2.0.0-alpha.3",
+    "@kikstart-ui/ui-avatar": "^2.0.0-alpha.3",
+    "@kikstart-ui/ui-brand": "^2.0.0-alpha.3",
+    "@kikstart-ui/ui-button": "^2.0.0-alpha.3",
+    "@kikstart-ui/ui-card": "^2.0.0-alpha.3",
+    "@kikstart-ui/ui-cart-icon": "^2.0.0-alpha.3",
+    "@kikstart-ui/ui-code": "^2.0.0-alpha.3",
+    "@kikstart-ui/ui-comment": "^2.0.0-alpha.3",
+    "@kikstart-ui/ui-footer": "^2.0.0-alpha.3",
+    "@kikstart-ui/ui-form": "^2.0.0-alpha.3",
+    "@kikstart-ui/ui-hero": "^2.0.0-alpha.3",
+    "@kikstart-ui/ui-icon": "^2.0.0-alpha.3",
+    "@kikstart-ui/ui-label": "^2.0.0-alpha.3",
+    "@kikstart-ui/ui-link": "^2.0.0-alpha.3",
+    "@kikstart-ui/ui-loading": "^2.0.0-alpha.3",
+    "@kikstart-ui/ui-markdown": "^2.0.0-alpha.3",
+    "@kikstart-ui/ui-navbar": "^2.0.0-alpha.3",
+    "@kikstart-ui/ui-no-data": "^2.0.0-alpha.3",
+    "@kikstart-ui/ui-price": "^2.0.0-alpha.3",
+    "@kikstart-ui/ui-tabs": "^2.0.0-alpha.3",
+    "@kikstart-ui/ui-timeago": "^2.0.0-alpha.3",
     "add": "^2.0.6",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
